# relacs

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.h  NEWS  README  README.md  THANKS  TODO  TODO.txt  bootstrap.sh  configure.ac  configure.in  create_debian_package.sh  docbook.mk  doxygen.mk  macros.cfg  macroscalib.cfg  macrosjan.cfg  moc3.mk  relacs.cfg  relacs_run.sh  relacslocal.cfg.in  relacslocal.in  relacsplugins.cfg  release.sh  test_install.sh
auditory/: Makefile  Makefile.am  doxygen.mk  doxygenauditory.mk
auditory/base/: Makefile  Makefile.am  auditoryneuron.cc  auditoryneuron.h  auditorysearch.cc  auditorysearch.h  auditorysession.cc  auditorysession.h  auditorytraces.cc  auditorytraces.h  ficurve.cc  ficurve.h  fifield.cc  fifield.h  singlestimulus.cc  singlestimulus.h  spikeprecision.cc  spikeprecision.h  syslatency.cc  syslatency.h
auditory/doc/: auditory.dox  auditory.dox.in
auditory/sascha/: Makefile  Makefile.am  isoresponse.cc  isoresponse.h  oneclick.cc  oneclick.h
auditory/speaker/: Makefile  Makefile.am  calibspeakers.cc  calibspeakers.h  loudspeaker.cc  loudspeaker.h
common/: Makefile  Makefile.am  doxygencommon.mk
common/base/: Makefile  Makefile.am  ephystraces.cc  ephystraces.h  pause.cc  pause.h  restartdelay.cc  restartdelay.h  stimulusdelay.cc  stimulusdelay.h
common/controls/: Makefile  Makefile.am  motorcontrol.cc  motorcontrol.h  spectrumanalyzer.cc  spectrumanalyzer.h
common/detectors/: Makefile  Makefile.am  spikedetector.cc  spikedetector.h
common/doc/: common.dox  common.dox.in
common/filter/: Makefile  Makefile.am  highpass.cc  highpass.h  lowpass.cc  lowpass.h
common/models/: Makefile  Makefile.am  neuronmodels.cc  neuronmodels.h  simplemodel.cc  simplemodel.h  spikingneuron.cc
config/: Makefile  Makefile.am  Makefile.h  configure.ac.in  doxygen.mk  doxygenconfig.mk
config/doc/: config.dox.in
config/m4/: relacs_link_tests.m4  relacs_qt3.m4
config/src/: Makefile  Makefile.am  config.cc  config.h  configclass.cc  configclass.h  configdialog.cc  configdialog.h  configure.cc  configure.h
daq/: Makefile  Makefile.am  Makefile.h  configure.ac.in  doxygen.mk  doxygendaq.mk
daq/doc/: Doxyfile  daq.doc  daq.dox.in  stimulusmetadata.doc
daq/examples/: Makefile  Makefile.am  indatatimeindex.cc
daq/m4/: ax_prog_doxygen.m4  relacs_gsl.m4
daq/src/: Makefile  Makefile.am  acquire.cc  acquire.h  analoginput.cc  analoginput.h  analogoutput.cc  analogoutput.h  attenuate.cc  attenuate.h  attenuator.cc  attenuator.h  camera.cc  checkmatrix.cc  checkpoint.cc  checkshape.cc  daqerror.cc  daqerror.h  device.cc  digitalio.cc  indata.cc  indata.h  inlist.cc  inlist.h  manipulator.cc  matrix.cc  outdata.cc  outdata.h  outdatainfo.cc  outlist.cc  outlist.h  point.cc  shape.cc  temperature.cc  temperature.h  tracespec.cc  trigger.cc  zones.cc
datafile/: Makefile  Makefile.am  configure.ac.in  doxygen.mk  doxygendatafile.mk
datafile/datatools/: Makefile  Makefile.am  bindata.cc  convertdata.cc  datacolumn.cc  datainfo.cc  datastats.cc  extractdata.cc  fixdata.cc  mergedata.cc  plotdata.cc  selectdata.cc  splitdata.cc
datafile/doc/: Doxyfile  datafile.dox.in
datafile/examples/: Makefile  Makefile.am  copydata.cc  pipe.cc  processdata.cc  xdatafile.cc  xtablekey.cc  xtranslate.cc
datafile/m4/: ax_prog_doxygen.m4
datafile/src/: Makefile  Makefile.am  datafile.cc  datafile.h  tabledata.cc  tabledata.h  tablekey.cc  tablekey.h  translate.cc  translate.h
hardware/: Makefile  Makefile.am  amplmode.cc  amplmode.h  comedianaloginput.cc  comedianaloginput.h  comedianalogoutput.cc  comedianalogoutput.h  comedihardware.cc  cs3310nidio.cc  cs3310nidio.h  cs3310pp.cc  cs3310pp.h  cs3310serialnidio.cc  cs3310serialnidio.h  doxygen.mk  doxygenhardware.mk  dynclampanaloginput.cc  dynclampanaloginput.h  dynclampanalogoutput.cc  dynclampanalogoutput.h  hardware.cc  killcomedimodules.sh  kleindiek.cc  kleindiek.h  loadcomedimodules.sh  moduledef.cc  niai.cc  niai.h  niao.cc  niao.h  nidaq.cc  nidaq.h  nidio.cc  nidio.h  nieserieshardware.cc  nipfi.cc  nipfi.h  relacshelp.mk  tempdtm5080.cc  (+1 more)
hardware/doc/: Doxyfile  hardware.dox.in
hardware/examples/: Makefile  mm3a.cc  temp.cc
hardware/m4/: relacs_comedi.m4
hardware/src/: Makefile.am  amplmode.cc  comedianaloginput.cc  comedianalogoutput.cc  comedihardware.cc  cs3310nidio.cc  cs3310pp.cc  cs3310serialnidio.cc  dynclampanaloginput.cc  dynclampanalogoutput.cc  hardware.cc  kleindiek.cc  mm3a.cc  niai.cc  niao.cc  nidio.cc  nieserieshardware.cc  nipfi.cc  temp.cc  tempdtm5080.cc
mplot/: Makefile  Makefile.am  configure.ac.in  doxygen.mk  doxygenmplot.mk
numerics/: Makefile  Makefile.am  Makefile.h  configure.ac.in  doxygen.mk  doxygennumerics.mk
options/: Makefile  Makefile.am  Makefile.h  configure.ac.in  doxygen.mk  doxygenoptions.mk
plot/: Makefile.am  bootstrap.sh  configure.ac.in  doxygen.mk  moc3.mk  moc4.mk
relacs/: Makefile  Makefile.am  Makefile.in  doxygen.mk  doxygenrelacs.mk
src/: Makefile  Makefile.am  RELACS.desktop  aisim.h  aosim.h  attsim.h  control.cc  control.h  defaultrepro.cc  defaultrepro.h  defaultsession.h  filterdetectors.h  macros.cc  macros.h  metadata.cc  metadata.h  plottrace.h  rangeloop.cc  rangeloop.h  relacs.cfg.in  relacs.in  relacs_cfg_foot  relacs_cfg_head  relacs_foot  relacs_head  relacs_runner_foot  relacs_runner_head  relacslocal_head  relacsmain.cc  relacsplugin.h  relacswidget.cc  repro.cc  repros.cc  savefiles.cc  session.cc  session.h  settings.cc  settings.h  spiketrace.h
utils/: Makefile  Makefile.am  Makefile.plugins  RELACS.kdelnk  addgpl  analyze_headers.sh  autoemailbugs  bin2dat.c  bin2dat.doc  bin2wav  bin2wav.c  checkao.cc  createhelp  createweb  data.c  diffrelacs  lcc.pl  move_includes.sh  move_moc.sh  raw2wav.py  relacshelp  relacsscript  relacsstats  remotebackup  replace.pl  scaninf  scaninf.doc  stopjobs  svn-fillignore  svn-listignore  svn-propapp  svn-removeempty  updatefiles  updategpl  uw2sw.c
widgets/: Makefile  Makefile.am  configure.ac.in  doxygen.mk  doxygenwidgets.mk
(+1211 files in other folders)
